# balance

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
scripts/: gen-icons.cjs
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/hosxp/: commands.rs  db.rs
src-tauri/src/invs/: commands.rs  db.rs  mod.rs
src/components/: AppHeader.vue  ConnectionSettings.vue  DrugSearchPanel.vue  DrugTrendChart.vue  SummaryKpiBar.vue
src/composables/: onClickOutside.ts  useHosxpData.ts  useInvsData.ts
src/stores/: dashboard.ts  dbConfig.ts
src/styles/: kraken-theme.css
src/utils/: dateUtils.ts
