[package]
name = "balance"
version = "0.1.0"
edition = "2024"
description = "Balance — Combined HOSxP & INVS drug dashboard"

[lib]
name = "balance_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# MySQL (HOSxP)
sqlx = { version = "0.8", features = ["mysql", "runtime-tokio", "chrono"] }
# SQL Server (INVS)
tiberius = { version = "0.12", default-features = false, features = ["tokio", "rustls", "sql-browser-tokio"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3"

[profile.dev]
incremental = true

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
